--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@splinetool/react-spline": "^4.0.0",
+    "axios": "^1.7.4",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
